recursion.cons.lessons.recursion.cons.Occurrence.scala.error
occurences:6: error: not enough arguments for method occurences: (l: List[Int], v: Int)Int.
Unspecified value parameter v.
		return 1+occurences(l.tail)
                                   ^occurences:7: error: not enough arguments for method occurences: (l: List[Int], v: Int)Int.
Unspecified value parameter v.
	else return occurences(l.tail)
                              ^